--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "express": "^4.16.2",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "socket.io": "^2.0.4"
   }
 }
