--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "browser-sync": "^2.18.13",
     "browserify": "^14.5.0",
     "del": "^3.0.0",
+    "documentation": "^5.3.5",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
+    "gulp-documentation": "^3.2.1",
     "gulp-htmlmin": "^3.0.0",
     "gulp-import-css": "^0.1.3",
     "gulp-plumber": "^1.1.0",
